@@ -4,7 +4,7 @@
     <packaging>pom</packaging>
     <groupId>com.javax0.geci</groupId>
     <artifactId>javageci-parent</artifactId>
-    <version>1.3.1-SNAPSHOT</version>
+    <version>1.5.0-SNAPSHOT</version>
     <name>javageci-parent</name>
     <description>Java GEnerate Code Inline source code generation framework</description>
     <modules>
@@ -46,7 +46,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0-M3</version>
+                    <version>3.0.0-M4</version>
                     <configuration>
                         <argLine>
                             --add-opens geci.api/javax0.geci.api=ALL-UNNAMED
@@ -61,6 +61,9 @@
                             --add-opens geci.engine/javax0.geci.engine=ALL-UNNAMED
                             --add-opens geci.core/javax0.geci.fluent.syntax=ALL-UNNAMED
                             --add-opens geci.core/javax0.geci.record=ALL-UNNAMED
+                            --add-opens geci.core/javax0.geci.repeated=ALL-UNNAMED
+                            --add-opens geci.core/javax0.geci.iterate=ALL-UNNAMED
+                            --add-opens geci.core/javax0.geci.jdocify=ALL-UNNAMED
                             --add-opens geci.core/javax0.geci.mapper=ALL-UNNAMED
                             --add-opens geci.examples/javax0.geci.tutorials.simple=ALL-UNNAMED
                             --add-opens geci.examples/javax0.geci.tutorials.hello=ALL-UNNAMED
@@ -92,14 +95,14 @@
                         <dependency>
                             <groupId>org.junit.jupiter</groupId>
                             <artifactId>junit-jupiter-engine</artifactId>
-                            <version>5.5.1</version>
+                            <version>5.6.0</version>
                         </dependency>
                     </dependencies>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
-                    <version>3.0.1</version>
+                    <version>3.2.1</version>
                     <executions>
                         <execution>
                             <id>attach-sources</id>
@@ -112,18 +115,11 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.1.0</version>
+                    <version>3.1.1</version>
                     <configuration>
                         <detectLinks>false</detectLinks>
                         <failOnError>false</failOnError>
                     </configuration>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.ow2.asm</groupId>
-                            <artifactId>asm</artifactId>
-                            <version>7.0</version>
-                        </dependency>
-                    </dependencies>
                     <executions>
                         <execution>
                             <id>attach-javadocs</id>
@@ -155,48 +151,48 @@
             <dependency>
                 <groupId>com.javax0.geci</groupId>
                 <artifactId>javageci-api</artifactId>
-                <version>1.3.1-SNAPSHOT</version>
+                <version>1.5.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.javax0.geci</groupId>
                 <artifactId>javageci-core</artifactId>
-                <version>1.3.1-SNAPSHOT</version>
+                <version>1.5.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.javax0.geci</groupId>
                 <artifactId>javageci-tools</artifactId>
-                <version>1.3.1-SNAPSHOT</version>
+                <version>1.5.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.javax0.geci</groupId>
                 <artifactId>javageci-engine</artifactId>
-                <version>1.3.1-SNAPSHOT</version>
+                <version>1.5.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.javax0.geci</groupId>
                 <artifactId>javageci-annotation</artifactId>
-                <version>1.3.1-SNAPSHOT</version>
+                <version>1.5.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.javax0.geci</groupId>
                 <artifactId>javageci-docugen</artifactId>
-                <version>1.3.1-SNAPSHOT</version>
+                <version>1.5.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.javax0.geci</groupId>
                 <artifactId>javageci-core-annotations</artifactId>
-                <version>1.3.1-SNAPSHOT</version>
+                <version>1.5.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-api</artifactId>
-                <version>5.5.1</version>
+                <version>5.6.0</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-engine</artifactId>
-                <version>5.5.1</version>
+                <version>5.6.0</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -208,6 +204,12 @@
                 <groupId>com.javax0.jamal</groupId>
                 <artifactId>jamal-testsupport</artifactId>
                 <version>1.0.3</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>3.9.1</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
